<resources>
    <string name="app_name">Alarous Guide</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="des">Des</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="forget_password">Did you forget your password?</string>
    <string name="login">Login</string>
    <string name="browse_as_vistor">Browse as visitor</string>
    <string name="are_you_have_account">Are you have account ?</string>
    <string name="new_account">New account</string>
    <string name="send">Send</string>
    <string name="customer_account">Customer Account</string>
    <string name="trader_account">Trader Account</string>
    <string name="shop_name">shop name</string>
    <string name="confirm_password">confirm password</string>
    <string name="create">Create</string>
    <string name="phone">Phone</string>
    <string name="wedding_date">wedding date</string>
    <string name="add_offer_location">Add Offer Location</string>
    <string name="cannot_connect_to_google_play">Cannot connect to google play services</string>
    <string name="google_play_not_active">Google play services not active on this mobile</string>
    <string name="gps">GPS</string>
    <string name="open_gps">Please, open your GPS to determine your location</string>
    <string name="active">Active</string>
    <string name="cancel">Cancel</string>
    <string name="add_offer_data">Add Offer Data</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="my_offers">My Offers</string>
    <string name="name">name</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="alerts">Alerts</string>
    <string name="special_offers">Special Offers</string>
    <string name="gifts">Gifts</string>
    <string name="login_trader_account">Login Trader Account</string>
    <string name="share_app">Share App</string>
    <string name="terms_ans_conditions">Terms And Conditions</string>
    <string name="logout">Logout</string>
    <string name="advertising_method">Advertising Method</string>
    <string name="add_offer">Add Offer</string>
    <string name="no_offers_till_now">No Data Till Now</string>
    <string name="no_connection">No Internet connection, Make sure WIFI or CELLULAR DATA is turned on, then try again.</string>
    <string name="re_try">Retry</string>
    <string name="no_countries">No countries found</string>
    <string name="no_cities">No cities found</string>
    <string name="empty_field">Empty Field</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="weak_password">Weak Password</string>
    <string name="password_not_match">Password Not Match</string>
    <string name="invalid_phone">Invalid Phone</string>
    <string name="no_internet_connection">Please, Open Your Data Cellular Or WIFI First</string>
    <string name="wait">Please Wait</string>
    <string name="error">Wrong email or password</string>
    <string name="required">You must add this field</string>
    <string name="register_successfully">Register successfully</string>
    <string name="email_already_exist">Email aleady exist</string>
    <string name="phone_already_exist">Phone already exist</string>
    <string name="phone_and_email_already_exist">Phone and email already exist</string>
    <string name="choose_country_and_city_first">Choose country/city first</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="my_profile">My Profile</string>
    <string name="address">address</string>
    <string name="map">Address On Map</string>
    <string name="number">number</string>
    <string name="snap_chat">snapchat</string>
    <string name="facebook">facebook</string>
    <string name="instagram">instagram</string>
    <string name="pride_guide">Pride and groom guide</string>
    <string name="city_title">City</string>
    <string name="edit_my_profile">Edit profile</string>
    <string name="country">Country</string>
    <string name="whatsApp">Whatsapp</string>
    <string name="save">Save</string>
    <string name="done_saving">Saved</string>
    <string name="atleast4pic">You must add 4 pictures</string>
    <string name="endsIn">Ends in :</string>
    <string name="offerDuration">Offer duration :</string>
    <string name="offerNum">Offer number :</string>
    <string name="confirmDeleteOffer">Are you sure that you want to delete this offer? \n This cannot be undo</string>
    <string name="yesSure">YES I\'m sure</string>
    <string name="Cancel">Cancel</string>
    <string name="details_btn">Details</string>
    <string name="photos">Photos</string>
    <string name="price">Price</string>
    <string name="contact_us">Contact us</string>
    <string name="call">Call Us</string>
    <string name="Details">Offer Details</string>
    <string name="title_activity_search">Search</string>
    <string name="search_by_name">Search by word</string>
    <string name="search_result">Search Result</string>
    <string name="select_city">Select City</string>
    <string name="select_country">Select country</string>
    <string name="determine_price">Filter price</string>
    <string name="select_section">Select section</string>
    <string name="Edit_offer_data">Edit offer</string>
    <string name="offer_images">Offer images</string>
    <string name="offer_name">Offer name</string>
    <string name="desction">Description</string>
    <string name="add">Add</string>
    <string name="title_activity_account_settings">Account settings</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="login_first">Login first to continue</string>
    <string name="view_offer_location">View Offer Location</string>
    <string name="AM1">1- Login as a Trader.</string>
    <string name="AM2">2- Choose add offer from side menu.</string>
    <string name="AM3">3- Upload 4 images for the ad.</string>
    <string name="AM4">4- Write offer name.</string>
    <string name="AM5">5- Write price from - to.</string>
    <string name="AM6">6- Write description.</string>
    <string name="AM7">7- Choose country, city and section.</string>
    <string name="AM8">8- Click Add to add the offer.</string>
    <string name="password_sent">Password is sent to your email.</string>
    <string name="days">days</string>
    <string name="offerFrom">Offer from</string>
    <string name="mobileAndEmailExist">Phone and Email already exist</string>
    <string name="view_trader_location">Trader Location</string>
</resources>
