<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.company.brand.alarousguide.Activities.EditProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B10069">

            <TextView
                android:id="@+id/tv_myProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/edit_my_profile"
                android:textColor="#FFF" />

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/des"
                android:src="@drawable/icon_back_arrow_english" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/place_autocomplete_prediction_horizontal_margin"
        android:orientation="vertical">
    <EditText
        android:id="@+id/ET_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_silver"
        android:padding="14dp"
        android:hint="@string/phone"
        android:lines="1"
        android:singleLine="true"
        android:layout_marginBottom="@dimen/place_autocomplete_prediction_primary_text"
        />
    <EditText
        android:id="@+id/ET_email"
        android:layout_width="match_parent"
        android:lines="1"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:background="@drawable/border_silver"
        android:padding="14dp"
        android:hint="@string/email"
        android:layout_marginBottom="@dimen/place_autocomplete_prediction_primary_text"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/border_silver"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="@dimen/place_autocomplete_prediction_primary_text"
            >
    <Spinner
        android:id="@+id/spinner_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/country"
        />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/border_silver"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="@dimen/place_autocomplete_prediction_primary_text"
            >
    <Spinner
        android:id="@+id/spinner_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
        </LinearLayout>
    <EditText
        android:id="@+id/ET_whatsapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_silver"
        android:padding="14dp"
        android:hint="@string/whatsApp"
        android:lines="1"
        android:singleLine="true"
        android:layout_marginBottom="@dimen/place_autocomplete_prediction_primary_text"
        />
    <EditText
        android:id="@+id/ET_snapchat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_silver"
        android:padding="@dimen/place_autocomplete_button_padding"
        android:lines="1"
        android:singleLine="true"
        android:hint="@string/snap_chat"
        android:layout_marginBottom="@dimen/place_autocomplete_prediction_primary_text"
        />
    <EditText
        android:id="@+id/ET_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_silver"
        android:padding="14dp"
        android:lines="1"
        android:singleLine="true"
        android:hint="@string/facebook"
        android:layout_marginBottom="@dimen/place_autocomplete_prediction_primary_text"
        />
    <EditText
        android:id="@+id/ET_insta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_silver"
        android:padding="14dp"
        android:hint="@string/instagram"
        android:lines="1"
        android:singleLine="true"
        android:layout_marginBottom="@dimen/place_autocomplete_prediction_primary_text"
        />

    <Button
        android:id="@+id/BT_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_blue"
        android:padding="@dimen/place_autocomplete_button_padding"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:layout_marginBottom="@dimen/place_autocomplete_prediction_primary_text"
        />

    </LinearLayout>
    </ScrollView>
</LinearLayout>
</layout>