<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/des"
                android:src="@drawable/icon_location"/>

            <TextView
                android:id="@+id/tv_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:text="@string/gps"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#B10069"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:text="@string/open_gps"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_active"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/active"
                android:textColor="#FFFFFF"
                android:background="@drawable/button_nbety"/>

            <Button
                android:id="@+id/bt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/cancel"
                android:textColor="#FFFFFF"
                android:background="@drawable/button_blue"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>