<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B10069">


                <TextView
                    android:id="@+id/tv_myProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:text="@string/Details"
                    android:textColor="#FFF" />

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:contentDescription="@string/des"
                    android:src="@drawable/icon_back_arrow_english" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:background="@drawable/bg_defualt"
            android:padding="@dimen/place_autocomplete_prediction_primary_text"
            android:fillViewport="true"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_gravity="top"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/content"
                    android:visibility="visible"
                    android:layout_margin="@dimen/place_autocomplete_prediction_primary_text"
                    android:orientation="vertical"
                    android:padding="@dimen/place_autocomplete_button_padding"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/txt1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/AM1"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="10dp"
                        android:background="#BDBDBD"/>
                        <TextView
                            android:id="@+id/txt2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/AM2"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="10dp"
                        android:background="#BDBDBD"/>
                        <TextView
                            android:id="@+id/txt3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/AM3"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="10dp"
                        android:background="#BDBDBD"/>
                        <TextView
                            android:id="@+id/txt4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/AM4"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="10dp"
                        android:background="#BDBDBD"/>
                        <TextView
                            android:id="@+id/txt5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/AM5"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="10dp"
                        android:background="#BDBDBD"/>
                        <TextView
                            android:id="@+id/txt6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/AM6"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="10dp"
                        android:background="#BDBDBD"/>
                        <TextView
                            android:id="@+id/txt7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/AM7"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="10dp"
                        android:background="#BDBDBD"/>
                        <TextView
                            android:id="@+id/txt8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/AM8"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="10dp"
                        android:background="#BDBDBD"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </ScrollView>
    </LinearLayout>
</layout>
