<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.company.brand.alarousguide.Activities.EditProfileActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B10069">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:text="@string/title_activity_account_settings"
                    android:textColor="#FFF" />

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:contentDescription="@string/des"
                    android:src="@drawable/icon_back_arrow_english" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
        <ScrollView
            android:background="@drawable/bg_defualt"
            android:padding="@dimen/place_autocomplete_button_padding"
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="32dp"
                android:layout_gravity="center"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/border_silver"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginBottom="@dimen/place_autocomplete_prediction_primary_text"
                    >
                    <Spinner
                        android:id="@+id/spinner_language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/country"
                        />
                </LinearLayout>
                <EditText
                    android:id="@+id/ET_oldPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_silver"
                    android:padding="14dp"
                    android:hint="@string/old_password"
                    android:lines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="@dimen/place_autocomplete_prediction_primary_text"
                    />
                <EditText
                    android:id="@+id/ET_newPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_silver"
                    android:padding="14dp"
                    android:hint="@string/new_password"
                    android:lines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="@dimen/place_autocomplete_prediction_primary_text"
                    />

                <EditText
                    android:id="@+id/ET_passwordConfirm"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:singleLine="true"
                    android:background="@drawable/border_silver"
                    android:padding="14dp"
                    android:hint="@string/confirm_password"
                    android:layout_marginBottom="64dp"
                    />
                <Button
                    android:id="@+id/BT_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_blue"
                    android:padding="@dimen/place_autocomplete_button_padding"
                    android:text="@string/save"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="@dimen/place_autocomplete_prediction_primary_text"
                    />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>